kubernetes/front/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: proyecto
    name: deploy-web-proyecto-sopes2
    namespace: proyecto
spec:
    replicas: 2
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 25%
    selector:
        matchLabels:
            app: proyecto
    template:
        metadata:
            labels:
                app: proyecto
        spec:
            containers:
                - image:
                  name: proyecto-grupo16-so2-frontend 
                  ports:
                      - containerPort: 80
            restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
    labels:
        app: proyecto
    name: service-web-proyecto-sopes2
    namespace: proyecto
spec:
    ports:
        - port: 80
          protocol: TCP
          targetPort: 80
    selector:
        app: proyecto
