kubernetes/front/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    annotations:
        kubernetes.io/ingress.class: "nginx"
        nginx.ingress.kubernetes.io/ssl-redirect: "true"
        nginx.ingress.kubernetes.io/grpc-backend: "true"
    name: frontend-ingress
spec:
    rules:
        - host: nginx.example.com # cambiar esta linea por dominio
          http:
              paths:
                  - backend:
                        serviceName: frontend-service
                        servicePort: 80
